--- a/PrismSample/PrismSample/PrismSample.csproj
+++ b/PrismSample/PrismSample/PrismSample.csproj
@@ -46,5 +46,8 @@
     <EmbeddedResource Update="Pages\RootTabbedPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Pages\StartupPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
